v3/crates/engine/tests/snapshots/relationship__common__ir_execute__remote_relationships__from_nested_admin.snap
---
source: crates/engine/tests/common.rs
expression: query_ir
---
V1(
    QueryRequestV1 {
        queries: {
            Alias(
                Identifier(
                    "InstitutionMany",
                ),
            ): Model(
                ModelSelection {
                    target: ModelTarget {
                        subgraph: SubgraphName(
                            "default",
                        ),
                        model_name: ModelName(
                            Identifier(
                                "institutions",
                            ),
                        ),
                        arguments: {},
                        filter: None,
                        order_by: [],
                        limit: None,
                        offset: None,
                    },
                    selection: {
                        Alias(
                            Identifier(
                                "staff",
                            ),
                        ): Field(
                            ObjectFieldSelection {
                                target: ObjectFieldTarget {
                                    field_name: FieldName(
                                        Identifier(
                                            "staff",
                                        ),
                                    ),
                                    arguments: {},
                                },
                                selection: None,
                            },
                        ),
                    },
                },
            ),
        },
    },
)
