v3/crates/engine/tests/snapshots/relationship__common__ir_execute__remote_relationships__from_nested_user2.snap
---
source: crates/engine/tests/common.rs
expression: query_ir
---
V1(
    QueryRequestV1 {
        queries: {
            Alias(
                Identifier(
                    "InstitutionMany",
                ),
            ): Model(
                ModelSelection {
                    target: ModelTarget {
                        subgraph: SubgraphName(
                            "default",
                        ),
                        model_name: ModelName(
                            Identifier(
                                "institutions",
                            ),
                        ),
                        arguments: {},
                        filter: None,
                        order_by: [],
                        limit: None,
                        offset: None,
                    },
                    selection: {
                        Alias(
                            Identifier(
                                "staff",
                            ),
                        ): Field(
                            ObjectFieldSelection {
                                target: ObjectFieldTarget {
                                    field_name: FieldName(
                                        Identifier(
                                            "staff",
                                        ),
                                    ),
                                    arguments: {},
                                },
                                selection: Some(
                                    {
                                        Alias(
                                            Identifier(
                                                "last_name",
                                            ),
                                        ): Field(
                                            ObjectFieldSelection {
                                                target: ObjectFieldTarget {
                                                    field_name: FieldName(
                                                        Identifier(
                                                            "last_name",
                                                        ),
                                                    ),
                                                    arguments: {},
                                                },
                                                selection: None,
                                            },
                                        ),
                                        Alias(
                                            Identifier(
                                                "favourite_artist_id",
                                            ),
                                        ): Field(
                                            ObjectFieldSelection {
                                                target: ObjectFieldTarget {
                                                    field_name: FieldName(
                                                        Identifier(
                                                            "favourite_artist_id",
                                                        ),
                                                    ),
                                                    arguments: {},
                                                },
                                                selection: None,
                                            },
                                        ),
                                        Alias(
                                            Identifier(
                                                "favourite_artist",
                                            ),
                                        ): Relationship(
                                            RelationshipSelection {
                                                target: RelationshipTarget {
                                                    relationship_name: RelationshipName(
                                                        Identifier(
                                                            "favourite_artist",
                                                        ),
                                                    ),
                                                    arguments: {},
                                                    filter: None,
                                                    order_by: [],
                                                    limit: None,
                                                    offset: None,
                                                },
                                                selection: Some(
                                                    {
                                                        Alias(
                                                            Identifier(
                                                                "name",
                                                            ),
                                                        ): Field(
                                                            ObjectFieldSelection {
                                                                target: ObjectFieldTarget {
                                                                    field_name: FieldName(
                                                                        Identifier(
                                                                            "name",
                                                                        ),
                                                                    ),
                                                                    arguments: {},
                                                                },
                                                                selection: None,
                                                            },
                                                        ),
                                                        Alias(
                                                            Identifier(
                                                                "artist_id",
                                                            ),
                                                        ): Field(
                                                            ObjectFieldSelection {
                                                                target: ObjectFieldTarget {
                                                                    field_name: FieldName(
                                                                        Identifier(
                                                                            "artist_id",
                                                                        ),
                                                                    ),
                                                                    arguments: {},
                                                                },
                                                                selection: None,
                                                            },
                                                        ),
                                                    },
                                                ),
                                            },
                                        ),
                                    },
                                ),
                            },
                        ),
                    },
                },
            ),
        },
    },
)
